# voxelize

./: .eslintignore  .eslintrc  .eslintrc.json  .gitignore  .gitmodules  .lintstagedrc  .npmignore  .npmrc  404.html  AGENTS.md  CNAME  Cargo.toml  IDLE_CPU_REPORT.md  README.md  blog.html  build.rs  check-client.mjs  check-dev-env.mjs  check-onboarding.mjs  check-preflight.mjs  check-runtime-libraries.mjs  check-ts-core.mjs  check-wasm-pack.mjs  components.html  fizzbuzz.py  index.html  jest.config.js  lerna.json  markdown-page.html  messages.proto  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rollup.config.js  rust-toolchain.toml  sitemap.xml  tsconfig.build.json  tsconfig.json  verify-installation.sh  (+2 more)
.cargo/: config.toml
.cursor/: .gitignore  environment.json
.devcontainer/: Dockerfile  devcontainer.json  update-content.sh
.github/: FUNDING.yml
benches/: lights_bench.rs  mesher_bench.rs  pathfinding_bench.rs
blog/: archive.html  atom.xml  authors.html  first-blog-post.html  index.html  long-blog-post.html  mdx-blog-post.html  rss.xml  tags.html  welcome.html
client/: index.ts  package.json  rollup.config.js  tsconfig.json  types.ts
components/: index.html
crates/lighter/: Cargo.toml  LICENSE  README.md
crates/lighter/benches/: lights_bench.rs
crates/lighter/src/: lib.rs  lighter.rs  types.rs
crates/mesher/: Cargo.toml  OPTIMIZATION_REPORT_2026-05-18.md  README.md
crates/mesher/benches/: greedy_mesher_bench.rs
crates/mesher/scripts/: aggregate_bench_medians.py  bench_outcome_summary.py  bench_regression_gate.py  bench_speedup_summary.py  bench_stability_gate.py  compare_bench_medians.py  compare_bench_sets.py
crates/mesher/src/: lib.rs  lod.rs  mesher.rs
crates/mesher/tests/: greedy_snapshot_tests.rs
crates/mesher/tests/snapshots/: greedy_snapshot_dynamic_patterns_and_rules.snap  greedy_snapshot_dynamic_world_space_patterns.snap  greedy_snapshot_fluid_waterlogged_and_occlusion_properties.snap  greedy_snapshot_rotation_independent_and_isolated_faces.snap  greedy_snapshot_seeded_property_mix.snap  greedy_snapshot_standalone_transparency_boundaries.snap  greedy_snapshot_transparency_properties.snap  non_greedy_snapshot_dynamic_patterns_and_rules.snap  non_greedy_snapshot_dynamic_world_space_patterns.snap  non_greedy_snapshot_fluid_waterlogged_and_occlusion_properties.snap  non_greedy_snapshot_rotation_independent_and_isolated_faces.snap  non_greedy_snapshot_seeded_property_mix.snap  non_greedy_snapshot_standalone_transparency_boundaries.snap  non_greedy_snapshot_transparency_properties.snap
crates/voxelize/: Cargo.toml
crates/voxelize-actix/: Cargo.toml
crates/voxelize-actix/src/: client.rs  constants.rs  filter.rs  lib.rs  messages.rs  routes.rs  server.rs  session.rs
crates/voxelize-protocol/: Cargo.toml  messages.proto
crates/voxelize-protocol/src/: lib.rs  utils.rs
crates/voxelize-protocol/src/builders/: action.rs  chunk.rs  entity.rs  event.rs  geometry.rs  mesh.rs  method.rs  packet.rs
crates/voxelize/src/: block.rs  lib.rs  registry.rs  world.rs
crates/voxelize/src/block/: access.rs  faces.rs  id.rs  mod.rs  registry.rs  rotation.rs  update.rs  utils.rs  uv.rs
crates/voxelize/src/chunks/: chunk.rs  coords.rs  manager.rs  mod.rs  space.rs  utils.rs  voxel.rs
crates/voxelize/src/libs/: math.rs
crates/voxelize/src/light/: color.rs  mod.rs  utils.rs
crates/voxelize/src/mesher/: default.rs  mod.rs  region.rs  registry.rs  vertex.rs
crates/voxelize/src/physics/: aabb.rs  mod.rs
crates/voxelize/src/texture/: atlas.rs  corner.rs  face.rs  mod.rs  uv.rs
crates/wasm-lighter/: Cargo.toml  README.md  package.json
crates/wasm-lighter/src/: lib.rs
crates/wasm-mesher/: Cargo.toml
crates/wasm-mesher/src/: lib.rs
docs/: .gitignore  AGENT.md  docusaurus.config.js  docusaurus.config.ts  package.json  sidebars-api.js  sidebars.js  tailwind.config.js
examples/server/: Cargo.toml  entity.rs  main.rs  package.json  registry.rs  test.rs  tsconfig.json  world.rs
examples/server/generator/: mod.rs  test.rs  tree.rs  water.rs
examples/server/src/: block.rs  index.ts  main.rs  world.rs
examples/server/src/world/: block.rs  mesher.rs  mod.rs  stages.rs  types.rs
examples/server/src/world/components/: chunk_requests.rs  client_id.rs  flags.rs  mod.rs
examples/server/src/world/systems/: chunk_requesting.rs  chunking.rs  mod.rs
examples/server/world/: main.rs  mod.rs  shared.rs  terrain.rs
examples/server/world/flat/: mod.rs
examples/server/world/flat/comps/: countdown.rs
examples/server/world/flat/systems/: countdown.rs  mod.rs  name_metadata.rs
examples/server/world/terrain/: biomes.rs  mod.rs  world.rs
examples/server/worlds/: mod.rs
examples/server/worlds/flat/: mod.rs
examples/server/worlds/flat/comps/: mod.rs
examples/server/worlds/flat/systems/: countdown.rs  mod.rs  name_metadata.rs
examples/server/worlds/shared/: astar.rs  client.rs  entities.rs  kdtree.rs  methods.rs  mod.rs  quaternion.rs  stage.rs
examples/server/worlds/shared/components/: brain.rs  fauna.rs  flags.rs  holding_object_id.rs  mod.rs  path.rs  role.rs  rotation.rs  target.rs  text.rs
examples/server/worlds/shared/systems/: entity_observe.rs  entity_tree.rs  extra_peer_meta.rs  fauna_wander.rs  mod.rs  path_finding.rs  path_metadata.rs  role_metadata.rs  rotation_metadata.rs  target_metadata.rs  text_metadata.rs  void_kill.rs  walk_towards.rs
examples/server/worlds/terrain/: biomes.rs  mod.rs
examples/server/worlds/test/: mod.rs
notes/: entity-motion-replication.md  three_pass_lighting.md
protocol/: package.json
scripts/: analyze-replication-perf.mjs  command-utils.mjs  dev-env-utils.mjs  e2e-lifecycle-gate.mjs  report-utils.mjs
server/: common.rs  errors.rs  lib.rs  perf.rs  runtime.rs  types.rs
test/: client-wasm-preflight.test.ts  command-utils.test.ts  dev-env-utils.test.ts  preflight-report.test.ts  report-utils.test.ts  runtime-libraries-check.test.ts  script-aliases.test.ts  script-checks.test.ts  ts-core-check.test.ts
tests/: block.rs  chunk_colliders.rs  chunk_lod_tests.rs  (+11 more)
(+2378 files in other folders)
