[package]
name = "voxelize"
version = "0.1.0"
edition = "2021"
exclude = [
  "client",
  "docs",
  "dist",
  "examples",
  "node_modules",
  "package.json",
  "tsconfig.*",
  "yarn.lock",
  "*.js",
  "*.ts",
  "transport"
]


[dependencies]


[build-dependencies]
prost-build = "0.11.9"
prost-wkt-build = "0.4.2"


[profile.release]
opt-level = 3


[[example]]
name = "demo"
path = "examples/server/main.rs"
