[package]
description = "A fast multiplayer voxel engine."
edition = "2021"
exclude = [
  "client",
  "docs",
  "dist",
  "examples",
  "node_modules",
  "package.json",
  "tsconfig.*",
  "yarn.lock",
  "*.js",
  "*.ts",
  "transport",
  "assets",
  "data",
  "tests",
]
license = "MIT"
name = "voxelize"
repository = "https://github.com/voxelize/voxelize"
version = "1.0.0"

[lib]
name = "voxelize"
path = "server/lib.rs"

[[example]]
name = "demo"
path = "examples/server/main.rs"

[dependencies]
voxelize-core = { path = "crates/core" }
voxelize-mesher = { path = "crates/mesher" }
actix = "0.13.3"
actix-cors = "0.7.0"
actix-files = "0.6.5"
actix-web = "4.5.1"
actix-ws = "0.3"
futures-util = "0.3"
tokio = { version = "1", features = ["sync", "macros"] }
base64 = "0.22.0"
byteorder = "1.5.0"
crossbeam-channel = "0.5.12"
fastrand = "2.0.2"
hashbrown = { version = "0.14.3", features = ["serde", "rayon"] }
indicatif = "0.17.8"
libflate = "2.0.0"
lz4_flex = "0.11"
kiddo = "4.2"
nalgebra = "0.33.0"
nanoid = "0.4.0"
noise = "0.9.0"
num = "0.4.2"
pprof = { version = "0.14", features = ["flamegraph"], optional = true }
prost = "0.12.4"
rapier3d = { version = "0.21.0", features = ["simd-stable"] }
rayon = "1.10.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
specs = { version = "0.20.0", features = ["specs-derive", "serde"] }
splines = { version = "4.3.1", features = ["serde"] }
pathfinding = "4.9.1"
blake3 = "1.5.0"
bincode = "1.3.3"

chrono = "0.4.19"
fern = { version = "0.6.2", features = ["colored"] }
lazy_static = "1.4"
log = "0.4.21"
webrtc = "0.11"
bytes = "1.5"

[features]
default = []
profiling = ["pprof"]

[build-dependencies]
prost-build = "0.12.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "mesher_bench"
harness = false

[[bench]]
name = "lights_bench"
harness = false

[profile.release]
opt-level = 3
debug = 2

[profile.bench]
inherits = "release"
