[package]
name = "voxelize-lighter"
version = "1.0.0"
edition = "2021"
description = "Lighting propagation logic for Voxelize"
license = "MIT"
repository = "https://github.com/voxelize/voxelize"

[lib]
crate-type = ["lib"]

[dependencies]
voxelize-core = { path = "../core" }
hashbrown = { version = "0.14.3", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "lights_bench"
harness = false
