[package]
name = "voxelize-mesher"
version = "1.0.0"
edition = "2021"
description = "Meshing logic for Voxelize"
license = "MIT"

[lib]
crate-type = ["lib"]

[dependencies]
voxelize-core = { path = "../core" }
hashbrown = { version = "0.14.3", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
