[package]
name = "voxelize-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web-actors = "4.2.0"
serde = "1.0.163"
serde_json = "1.0.96"
hashbrown = "0.13.2"

voxelize = { path = "../voxelize" }
voxelize-protocol = { path = "../voxelize-protocol" }