[package]
name = "voxelize-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
serde = "1.0.183"
serde_json = "1.0.105"
hashbrown = "0.14.0"
nanoid = "0.4.0"

voxelize = { path = "../voxelize" }
voxelize-protocol = { path = "../voxelize-protocol" }