[package]
name = "voxelize-protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.9"
serde = "1.0.163"
serde_json = "1.0.96"
prost-wkt = "0.4.1"
prost-wkt-types = "0.4.1"

[build-dependencies]
prost-build = "0.11.1"
prost-wkt-build = "0.4"