[package]
name = "voxelize"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.1"
hashbrown = "0.14.0"
serde = { version = "1.0.183", features = ["derive"] }
nanoid = "0.4.0"
crossbeam-channel = "0.5.8"

voxelize-protocol = { path = "../voxelize-protocol" }