[package]
name = "voxelize-wasm-lighter"
version = "1.0.0"
edition = "2021"
description = "WebAssembly wrapper for voxelize-lighter"
license = "MIT"
repository = "https://github.com/voxelize/voxelize"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
voxelize-lighter = { path = "../lighter" }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[profile.release]
opt-level = 3
lto = true
