[package]
name = "voxelize-wasm-mesher"
version = "1.0.0"
edition = "2021"
description = "WebAssembly wrapper for voxelize-mesher"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
voxelize-mesher = { path = "../mesher" }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[profile.release]
opt-level = 3
lto = true

# `wasm-pack build --dev` (the watch loop) compiles this profile. opt-level 1
# keeps rebuilds fast and incremental while making the meshing hot loops
# usable in the browser, unlike the default opt-level 0.
[profile.dev]
opt-level = 1
