[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4"

voxelize = { path = "../../crates/voxelize" }
voxelize-actix = { path = "../../crates/voxelize-actix" }
voxelize-protocol = { path = "../../crates/voxelize-protocol" }
