[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4"
actix-cors = "0.6.4"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
hashbrown = "0.14.0"

voxelize = { path = "../../crates/voxelize" }
voxelize-actix = { path = "../../crates/voxelize-actix" }
voxelize-protocol = { path = "../../crates/voxelize-protocol" }
